--- a/blog/2025-10-21-starlake-snowflake-native-app.mdx
+++ b/blog/2025-10-21-starlake-snowflake-native-app.mdx
@@ -40,7 +40,7 @@ The Native App framework fundamentally shifts the security burden by leveraging 
 
 * **Applicative Security (Restricted Call Rights):** This is perhaps the most powerful security benefit. By using Snowflake's restricted call rights for applications, you can ensure that only authorized applications can access specific resources. 
 
-    For instance, you can restrict an an application to only access certain databases or schemas, irrespective of the user's broader permissions. This minimizes the risk of unauthorized data access.
+    For instance, you can restrict an application to only access certain databases or schemas, irrespective of the user's broader permissions. This minimizes the risk of unauthorized data access.
 
     **Scenario:** Imagine a developer who has access to your dev and production databases. If the user by mistake runs the ETL application against the production database, it could lead to data corruption or loss.
 
