--- a/blog/2025-10-21-starlake-snowflake-native-app.mdx
+++ b/blog/2025-10-21-starlake-snowflake-native-app.mdx
@@ -16,7 +16,7 @@ tags:
 
 # Why Starlake Chose to Go Native with Snowflake
 
-As a modern ETL/ELT framework, Starlake's core mission to manage complex data pipelines securely and efficiently. To fully deliver on this promise and eliminate the operational burdens of external data processing, Starlake made the strategic decision to embrace the Snowflake Native App Framework.
+As a modern ETL/ELT framework, Starlake's core mission is to manage complex data pipelines securely and efficiently. To fully deliver on this promise and eliminate the operational burdens of external data processing, Starlake made the strategic decision to embrace the Snowflake Native App Framework.
 
 Deploying Starlake directly within the consumer's Snowflake account—using the Native App model—unlocks a host of benefits that are simply unattainable with out-of-platform deployments, directly addressing the pain points of traditional data architecture, particularly around security, cost, and governance.
 
