--- a/blog/2025-09-18-beyond-basic-etl.mdx
+++ b/blog/2025-09-18-beyond-basic-etl.mdx
@@ -60,7 +60,7 @@ Starlake supports a comprehensive range of data sources:
 | -------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **File Formats**           | **Structured:** CSV, TSV, PSV (with multi-char separators)<br/>**Semi-structured:** JSON, XML, YAML<br/>**Binary:** Parquet, Avro, ORC<br/>**Compressed:** ZIP, GZIP, BZIP2<br/>**Other:** Fixed-width position files, Excel spreadsheets |
 | **Cloud Storage**          | Amazon S3, Google Cloud Storage, Azure Blob Storage, Local filesystem                                                                                                                                                                 |
-| **Databases & Warehouses** | Snowflake, BigQuery, Redshift, Databricks, PostgreSQL, MySQL, Oracle, SQL Server, DuckDB/Ducklake, any JDBC Databases                                                                                                                 |
+| **Databases & Warehouses** | Snowflake, BigQuery, Redshift, Databricks, PostgreSQL, MySQL, Oracle, SQL Server, DuckDB/DuckLake, any JDBC Databases                                                                                                                 |
 | **Streaming & Events**     | Apache Kafka, Amazon Kinesis, Google Pub/Sub, Azure Event Hubs                                                                                                                                                                        |
 
 For some warehouses or cloud providers, deep integration exists. For example, with Snowflake through Snowflake's Native App capability, you simply install: `install starlake -> native app` and get all the features inside Snowflake. This allows you to avoid sharing your Snowflake credentials with an external SaaS platform and avoid data exfiltration, as well as use your Snowflake compute credits to run Starlake and have a unified bill.
