--- a/blog/2025-11-10-starlake-ducklake.mdx
+++ b/blog/2025-11-10-starlake-ducklake.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Starlake + DuckLake: Enabling the Post-Modern Data Stack"
+title: "Starlake + DuckLake: Start Small, Scale Big"
 date: 2025-11-10
-description: "Exploring how Starlake and DuckLake together form the foundation for the Post-Modern Data Stack, emphasizing openness, declarative configuration, and developer-friendliness."
+description: "Explore how Starlake and DuckLake together form the foundation of the Post-Modern Data Stack, enabling quality-first ingestion, SQL-only transformations, local-first development, and open, scalable data management."
 tags: ["Starlake", "DuckLake", "Post-Modern Data Stack", "Data Engineering", "Open Source"]
 ---
 
