Update last sentence

--- a/blog/2025-11-10-starlake-ducklake.mdx
+++ b/blog/2025-11-10-starlake-ducklake.mdx
@@ -101,4 +101,4 @@ You can start today, locally or in the cloud, by simply running:
 From there, Starlake's UI and declarative engine are ready to orchestrate your pipelines, manage your data, 
 and connect seamlessly with DuckLake's open lakehouse format.
 
-``` Because in data engineering, he who can do the least, can also do more: the power lies in doing things simply, transparently, and well. ```
+**In data engineering, those who master simplicity master scale: the power to do more begins with the discipline to do less.**
