add github link

--- a/blog/2025-11-10-starlake-ducklake.mdx
+++ b/blog/2025-11-10-starlake-ducklake.mdx
@@ -48,15 +48,15 @@ no rewrites, no migrations, no friction.
 
 ## Start Small, Scale Big
 
-Let's start building our data pipeline with Starlake and DuckLake.
+Let's start building our data pipeline with Starlake and DuckLake. Full source code is available on [GitHub](https://github.com/starlake-ai/starlake/tree/master/samples/ducklake).
 
 First, install Starlake by following the instructions in the [Starlake documentation](https://starlake.ai/docs/installation).
 
 Bootstrap a project using a sample command line:
 
 ```bash
-cd /my/project/folder
-starlake bootstrap
+$ cd /my/project/folder
+$ starlake bootstrap
 ```
 
 In the metadata section of your `application.sl.yml`, configure DuckLake as your catalog:
@@ -166,5 +166,7 @@ proof that you don’t need heavyweight infrastructure to achieve warehouse-clas
 
 The future of data engineering is declarative, composable, and open.
 With Starlake + DuckLake, you can truly start small and scale big, without ever compromising on speed, quality, or control.
+
+
 
 
