--- a/blog/2025-11-14-starlake-corchestration.mdx
+++ b/blog/2025-11-14-starlake-corchestration.mdx
@@ -1,6 +1,9 @@
 ---
 title: "From Painful to Effortless: How Starlake Transforms Data Pipeline Orchestration"
 date: 2025-11-14
+authors:
+    - smanciot
+description: "Discover how Starlake simplifies data pipeline orchestration across Airflow, Dagster, and Snowflake Tasks, eliminating manual DAG creation and enhancing lineage tracking."
 tags: [starlake, orchestration, airflow, dagster, snowflake-tasks, data-pipelines]
 ---
 
